# llm-agent-framework

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  current_focus.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agents/nalla/: README.md  nalla.env.example  router_config.json
agents/nalla/seeds/: prompts.json
agents/nalla/tools/: ingredient_checker.py  safety_lookup.py
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_resize_memory_embeddings_to_voyage_dim.py  ffc0947f4d17_initial_tables.py
scripts/: healthcheck.py  seed_prompts.py
src/agent/: guardrails.py  llm_client.py  orchestrator.py  prompt_builder.py  router.py
src/api/: app.py
src/core/: config.py  container.py  dependencies.py  exceptions.py  logging.py  redis_keys.py  security.py
src/db/: engine.py  models.py
src/domain/: schemas.py
src/jobs/: result_store.py  tasks.py  worker.py
src/memory/: embedding_client.py  interfaces.py  session.py  vector_store.py
src/tools/: base.py  registry.py
tests/evals/: eval_runner.py
tests/integration/: conftest.py  test_agent_loop.py  test_api.py  test_async_jobs.py  test_memory.py
tests/unit/: conftest.py  test_admin.py  test_answer_cache.py  test_api_key.py  test_chat_rate_limit.py  test_config.py  test_guardrails.py  test_origin_guard.py  test_prediction_session.py  test_prediction_uploads.py  test_prompt_builder.py  test_rate_limit.py  test_redis_keys.py  test_registry.py  test_request_id.py  test_result_store.py  test_router.py  test_schemas.py  test_security.py  test_tasks.py  test_tools.py  test_vector_store.py
widget/: chat-widget.js  demo.html  nalla-widget.js
(+16 files in other folders)
